# lzma

./: Makefile.am  NEWS  README  THANKS  autogen.sh  configure.ac  lzma.spec  test-lib.sh
src/liblzmadec/: io.c  main.c  private.h
src/lzma/: Exception.h  Makefile.am  lzma.1  lzmp.cpp
src/sdk/7zip/Common/: FileStreams.cpp
tests/: Makefile.am  mkdtemp
